<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mocha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dlg_title">button</string>
    <string name="CSPedit">CSPedit</string>
    <string name="button">Button</string>
    <string name="Install">Install CSP APK</string>
    <string name="prefertitle">setting title</string>
    <string name="Selectapk">Select Application</string>
    <string name="backbutton">Back</string>
    <string name="certs">Select Certification</string>
    <string name="brows">Select File</string>
    <string name="Setting">Open Setting</string>
    <string name="Uninstall">App Uninstall</string>
    

</resources>
